[package]
name = "dpms-off"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-commons = "0.29"
clap = { version = "*", features = ["derive"] }

[dependencies.wayland-client]
version = "0.29"
features = ["use_system_lib"]

[dependencies.wayland-protocols]
version = "0.29"
features = ["client", "unstable_protocols"]

[build-dependencies]
wayland-scanner = "0.29"

[profile.release]
lto = true
