[package]
name = "dpms-off"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
wayland-client = "*"

[dependencies.wayland-protocols]
version = "*"
features = ["client", "staging"]

[dependencies.wayland-protocols-wlr]
version = "*"
features = ["client"]

[profile.release]
lto = true
